--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: test ccache
 on:
   push:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -13,23 +13,28 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build-type: [Debug, Release]
-        os: [ubuntu-20.04, windows-latest]
+        build-type: [RelWithDebInfo, Release]
+        os: [ubuntu-20.04, windows-2019]
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    
+    - name: Setup MSVC
+      if: matrix.os == 'windows-2019'
+      uses: ilammy/msvc-dev-cmd@v1.12.0
 
     - name: Ccache for gh actions
       uses: hendrikmuhs/ccache-action@v1.2
       with:
-        key: ${{ matrix.os }}-${{ matrix.build-type }}
+        key: ${{ github.job }}-${{ matrix.os }}-${{ matrix.build-type }}
+        verbose: 2
 
     - name: Build
       uses: lukka/run-cmake@v3
       with:
-        cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
+        cmakeListsOrSettingsJson: CMakeListsTxtBasic
         cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
         buildDirectory: '${{ github.workspace }}/build'
         cmakeBuildType: '${{ matrix.build-type }}'
-        cmakeAppendedArgs: '-D CMAKE_C_COMPILER_LAUNCHER=ccache -D CMAKE_CXX_COMPILER_LAUNCHER=ccache'
+        cmakeAppendedArgs: '-DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache'
